fix company api and email sending issue with forgot pass
